# AoC2021Mirror

./: Cargo.toml  Makefile  README.md  TODO.md  add_day.sh
Dia01/Python/: main.py
Dia01/d1p1/: Cargo.toml
Dia01/d1p1/src/: Main.java  MainCs.cs  main.bash  main.fuck.js  main.i  main.js  main.py  main.rs
Dia01/d1p2/: Cargo.toml
Dia01/d1p2/src/: Main.java  MainCs.cs  main.fuck.js  main.js  main.py  main.rs
Dia02/d2p1/src/: Main.java  Program.cs  main.js  main.py  main.rs  main.v
Dia02/d2p2/src/: Main.java  Program.cs  main.js  main.py  main.rs  main.v
Dia03/: js.txt  python.txt
Dia03/d3p1/src/: Main.java  Program.cs  main.js  main.py  main.rs
Dia03/d3p2/src/: Main.java  Program.cs  main.js  main.py  main.rs
Dia04/d4p1/src/: main.py
Dia04/d4p2/src/: main.py
Dia05/d5p1/src/: main.py
Dia05/d5p2/src/: main.py
Dia06/d6p1/src/: main.py
Dia06/d6p2/src/: main.py
Dia07/d7p1/src/: main.py
Dia07/d7p2/: Cargo.toml
Dia07/d7p2/src/: main.py
Dia08/d8p1/src/: main.py
Dia08/d8p2/: Cargo.toml
Dia08/d8p2/src/: main.py
Dia09/d9p1/: Cargo.toml
Dia09/d9p1/src/: main.py
Dia09/d9p2/: Cargo.toml
Dia09/d9p2/src/: main.py
Dia10/d10p1/src/: Main.java  Program.cs  main.js  main.py  main.rs
Dia10/d10p2/src/: Main.java  main.py
Dia11/d11p1/src/: main.py
Dia11/d11p2/src/: main.py
Dia12/d12p1/src/: main.js  main.py  main.rs
Dia12/d12p2/src/: main.js  main.py  main.rs
Dia13/d13p1/src/: main.rs
Dia23/d23p1/: Cargo.toml
Dia23/d23p2/: Cargo.toml
Dia24/: input.txt
Dia24/d24p1/: Cargo.toml
Dia24/d24p2/: Cargo.toml
Dia25/d25p1/: Cargo.toml
(+26 files in other folders)
