[workspace]
members = [
	"Dia01/d1p1",
	"Dia01/d1p2",
	"Dia02/d2p1",
	"Dia02/d2p2", 
	"Dia03/d3p1",
	"Dia03/d3p2",
	"Dia04/d4p1",
	"Dia04/d4p2",
	"Dia05/d5p1",
	"Dia05/d5p2",
	"Dia06/d6p1",
	"Dia06/d6p2",
	"Dia07/d7p1",
	"Dia07/d7p2",
	"Dia08/d8p1",
	"Dia08/d8p2",
	"Dia09/d9p1",
	"Dia09/d9p2",
	"Dia10/d10p1",
	"Dia10/d10p2",
	"Dia11/d11p1",
	"Dia11/d11p2",
	"Dia12/d12p1",
	"Dia12/d12p2"
]
