[workspace]
members = [
	"Dia01/d1p1",
	"Dia01/d1p2",
	"Dia02/d2p1",
	"Dia02/d2p2", 
	"Dia03/d3p1",
	"Dia03/d3p2",
	"Dia04/d4p1",
	"Dia04/d4p2",
	"Dia05/d5p1",
	"Dia05/d5p2",
	"Dia06/d6p1",
	"Dia06/d6p2",
	"Dia07/d7p1",
	"Dia07/d7p2",
	"Dia08/d8p1",
	"Dia08/d8p2",
	"Dia09/d9p1",
	"Dia09/d9p2",
	"Dia10/d10p1",
	"Dia10/d10p2",
	"Dia11/d11p1",
	"Dia11/d11p2",
	"Dia12/d12p1",
	"Dia12/d12p2",
	"Dia13/d13p1",
	"Dia13/d13p2",
	"Dia14/d14p1",
	"Dia14/d14p2",
	"Dia15/d15p1",
	"Dia15/d15p2",
	"Dia16/d16p1",
	"Dia16/d16p2",
	"Dia17/d17p1",
	"Dia17/d17p2",
	"Dia18/d18p1",
	"Dia18/d18p2",
	"Dia19/d19p1",
	"Dia19/d19p2",
	"Dia20/d20p1",
	"Dia20/d20p2",
	"Dia21/d21p1",
	"Dia21/d21p2",
	"Dia22/d22p1",
	"Dia22/d22p2",
	"Dia23/d23p1",
	"Dia23/d23p2",
	"Dia24/d24p1",
	"Dia24/d24p2",
	"Dia24/d24p1",
	"Dia24/d24p2",
	"Dia25/d25p1"
]
